tests/script_errors/heredoc_interpolation_invalid_unicode/error.txt
Error: 
    1 | 1; """
    2 | { "\u1" }
      |    ^^^^ An invalid UTF8 escape sequence was found